@@ -75,6 +75,7 @@ CREATE TABLE graphs (
   yaxistype		int(1)		DEFAULT '0' NOT NULL,
   yaxismin		double(16,4)	DEFAULT '0' NOT NULL,
   yaxismax		double(16,4)	DEFAULT '0' NOT NULL,
+  yaxisside		int(1)		DEFAULT '1' NOT NULL,
   PRIMARY KEY (graphid),
   KEY (name)
 ) type=InnoDB;
