@@ -61,6 +61,9 @@
 	define("GRAPH_YAXIS_TYPE_CALCULATED",0);
 	define("GRAPH_YAXIS_TYPE_FIXED",1);
 
+	define("GRAPH_YAXIS_SIDE_LEFT",0);
+	define("GRAPH_YAXIS_SIDE_RIGHT",1);
+
 	define("MAP_LABEL_TYPE_HOSTLABEL",0);
 	define("MAP_LABEL_TYPE_IP",1);
 	define("MAP_LABEL_TYPE_HOSTNAME",2);
