@@ -1,5 +1,6 @@
 Changes for 1.1beta3:
 
+ - added column graphs.yaxisside (Alexei)
  - startup script for Tru64 (Alexei)
  - added parameters support for user specifed functions "$1 $2 .. $9" (Eugene)
  - added table history_uint (Alexei)
